<resources>
    <string name="app_name">Logger</string>
    <string name="start_log">运行</string>
    <string name="stop_log">结束</string>
    <string name="connect_log">手机连接日志</string>
    <string name="system_log">网络连接日志</string>
    <string name="navi_log">导航定位服务日志</string>
    <string name="all_log">系统所有日志</string>
    <string name="noselect">没有选择可以记录的日志</string>
    <string name="check_proxy">check proxy</string>
    <string name="start_proxy">start proxy</string>
    <string name="stop_proxy">stop proxy</string>
</resources>
